--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Ship Management System</h5>
                     <p class="card-text" style="padding-left: 0px; padding-bottom: 0px;">This is my graduation project,
-                      a software written 100% in <i>Python GUI</i>.</p>
+                      a software written in <i>Python GUI</i>.</p>
                     <img style="max-width: 60%; max-height: 60%; padding-top: 0px; padding-bottom: 10px;"
                       src="./project3_images/l1.png">
                     <p></p>
@@ -133,8 +133,7 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Solving N-Puzzle Problems</h5>
-                    <p class="card-text" style="padding-left: 0px; padding-bottom: 20px;">An algorithm for solving
-                      n-puzzles related to artificial intelligence written 100% in <i>Java</i>.</p>
+                    <p class="card-text" style="padding-left: 0px; padding-bottom: 20px;">A Java-based AI project focused on solving n-puzzle problems using heuristic search.</p>
                     <img style="max-width: 60%; max-height: 60%; padding-top: 0px; padding-bottom: 10px;"
                       src="./project3_images/l3.png">
                     <p></p>
@@ -147,8 +146,7 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Machine Learning Projects</h5>
-                    <p class="card-text" style="padding-left: 0px; padding-bottom: 20px;">An algorithm written 100% in
-                      <i>Java</i> to find the best features combination that distinguishes two items.
+                    <p class="card-text" style="padding-left: 0px; padding-bottom: 20px;">A Java project designed to identify the optimal combination of features for classifying two items.
                     </p>
                     <img style="max-width: 60%; max-height: 60%; padding-top: 0px; padding-bottom: 10px;"
                       src="./project3_images/l3.png">
