--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
               <path
                 d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm12 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1v-1c0-1-1-4-6-4s-6 3-6 4v1a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1z" />
             </svg>
-            <span class="fs-4">Tao Chen's Porfolio</span>
+            <span class="fs-4"><strong>Tao Chen's Porfolio</strong></span>
           </a>
         </header>
 
-        <p style="font-family:cursive; font-size:xx-large; color:crimson; font-weight:900; padding: auto;">
+        <p style="font-family:cursive; font-size:xx-large; font-weight:900; padding: auto;">
           Welcome to My Website
           <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
             class="bi bi-emoji-sunglasses" viewBox="0 0 16 16" style="vertical-align:-11%;">
@@ -79,23 +79,23 @@
           </svg>
           !
         </p>
-        
 
-        <div class="shadow p-3 mb-5 bg-body-tertiary rounded">
 
+        <div class="shadow p-3 mb-5 rounded" style="background-color:lightblue">
           <p style="max-width: 73%;"><strong>I graduated from UC Riverside last December with a Bachelor of Science
               degree in Computer Science,
               achieving a Cumulative GPA of 3.79.</strong></p>
           <img style="max-width: 70%; max-height: 60%; padding-top: 15px; padding-bottom: 30px;"
             src="./project4_images/gpa.png">
-          <p style="color:red"><strong>I am an active coder.</strong></p>
+          <p><strong>I am an active coder.</strong></p>
           <img style="max-width: 70%; max-height: 60%; padding-top: 15px; padding-bottom: 30px;"
             src="./project4_images/git.png">
           <p><strong>Before July last year, I was still coding, but the code was mainly saved on my local
               computer.</strong></p>
         </div>
 
-        <div class="shadow p-3 mb-5 bg-body-tertiary rounded">
+
+        <div class="shadow p-3 mb-5 bg-body-tertiary rounded" style="background-color: aquamarine;">
           <div class="container-fluid py-3">
             <h2 class="display-7 fw-bold" style="padding-bottom: 15px;">My Projects</h2>
 
@@ -133,7 +133,8 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Solving N-Puzzle Problems</h5>
-                    <p class="card-text" style="padding-left: 0px; padding-bottom: 20px;">A Java-based AI project focused on solving n-puzzle problems using heuristic search.</p>
+                    <p class="card-text" style="padding-left: 0px; padding-bottom: 20px;">A Java-based AI project
+                      focused on solving n-puzzle problems using heuristic search.</p>
                     <img style="max-width: 60%; max-height: 60%; padding-top: 0px; padding-bottom: 10px;"
                       src="./project3_images/l3.png">
                     <p></p>
@@ -146,7 +147,8 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Machine Learning Projects</h5>
-                    <p class="card-text" style="padding-left: 0px; padding-bottom: 20px;">A Java project designed to identify the optimal combination of features for classifying two items.
+                    <p class="card-text" style="padding-left: 0px; padding-bottom: 20px;">A Java project designed to
+                      identify the optimal combination of features for classifying two items.
                     </p>
                     <img style="max-width: 60%; max-height: 60%; padding-top: 0px; padding-bottom: 10px;"
                       src="./project3_images/l3.png">
@@ -177,11 +179,11 @@
                     d="M4.285 9.567a.5.5 0 0 1 .683.183A3.5 3.5 0 0 0 8 11.5a3.5 3.5 0 0 0 3.032-1.75.5.5 0 1 1 .866.5A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1-3.898-2.25.5.5 0 0 1 .183-.683M7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5m4 0c0 .828-.448 1.5-1 1.5s-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5" />
                 </svg>
               </p>
-              <a href="./public/likes.html" class="btn btn-outline-light" type="button">My Top 3s</a>
+              <a href="./public/likes.html" class="btn btn-outline-light" type="button"><strong>My Top 3s</strong></a>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+            <div class="h-100 p-5 bg-body-tertiary border rounded-3"">
               <h2>Contact Me</h2>
               <p style="padding-left: 0px;"><strong>Tel:</strong> (626)378-7503</p>
               <p style="padding-left: 0px;"><strong>Email:</strong> tchen285@ucr.edu</p>
