--- a/public/projects.html
+++ b/public/projects.html
@@ -114,7 +114,7 @@
                       Port. Keoghs Port is a company that generates revenue through
                       <code>ship loading, unloading, and balancing</code>.
                     </p>
-                    <img src="../images/ship_port.jpg" class="img-fluid" alt="Project Image">
+                    <img src="../images/ship_port.jpg" class="img-fluid" alt="Project Image" style="max-width: 70%;">
                     <p style="padding-top: 20px">
                       When a ship arrives at the port, the operator—Keoghs Port staff stationed in a tower that moves
                       along with the crane—receives a <code>manifest</code> from the captain. This manifest is a text
@@ -156,7 +156,7 @@
                       calculate what they believed to be the best solution based on their past experience. This manual
                       process was time-consuming and couldn't guarantee the attainment of the optimal solution.
                     </p>
-                    <img src="../images/worker_calculating.jpeg" class="img-fluid" alt="Project Image">
+                    <img src="../images/worker_calculating.jpeg" class="img-fluid" alt="Project Image" style="max-width: 70%;">
                   </div>
                 </div>
               </div>
@@ -174,10 +174,11 @@
                   <strong>The software deals with X2 class ships, </strong>that means ships only have one bay. This one
                   bay has a possible <code>8 rows and 12 columns, </code>but some ships could have less.
                   <img src="../images/ship_bay1.png" class="img-fluid" alt="Project Image"
-                    style="padding-bottom: 20px;">
-                  <strong>Let's start with a 2x4 bay class ship, try to find the balancing process. </strong>Since the
-                  crane can only grab one container each time, it is always going to be pick up, drop off, pick up, drop
-                  off...
+                    style="padding-bottom: 20px; max-width: 70%;">
+                  <p><strong>Let's start with a 2x4 bay class ship, try to find the balancing process. </strong>Since the
+                    crane can only grab one container each time, it is always going to be pick up, drop off, pick up, drop
+                    off...</p>
+                  
                   <ul>
                     <li>In the odd layers, we pick a column to put the crane over, and pick up
                       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -271,41 +272,41 @@
                     crane.</p>
 
 
-                  <img style="max-width: 100%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;"
+                  <img style="max-width: 70%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;"
                     src="../images/software_images/software1.png" alt="Software Image 1">
 
                   <p>This operator can click "check in", and a window will pop up for the operator to enter his name,
                     then his name will show on the software.</p>
 
-                  <img style="max-width: 100%; padding-top: 15px; padding-bottom: 20px;"
+                  <img style="max-width: 70%; padding-top: 15px; padding-bottom: 20px;"
                     src="../images/software_images/software2.png" alt="Software Image 2">
 
                   <p>Next, the software asks the operator to upload a manifest file.</p>
-                  <img style="max-width: 100%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;"
+                  <img style="max-width: 80%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;"
                     src="../images/software_images/software3.png" alt="Software Image 3">
                   <p>On the next page of the software, displaying file names enables the operator to ensure that he is
                     dealing with the correct file. And the operator Andy needs to choose loading/unloading or balancing
                     the ship to continue.</p>
-                  <img style="max-width: 100%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;"
+                  <img style="max-width: 70%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;"
                     src="../images/software_images/software4.png" alt="Software Image 4">
                   <p><strong>Let's assume Andy clicks loading/unloading: </strong></p>
                   <p>Now, Andy can choose which containers on the ship he needs to unload, and he can also add loading
                     containers he needs to loading on the ship.</p>
-                  <img style="max-width: 100%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;"
+                  <img style="max-width: 70%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;"
                     src="../images/software_images/software5.png" alt="Software Image 5">
                   <p>After Andy pick the containers, the software will show up a summary to let him double check the
                     containers he just choose to unload and load.</p>
-                  <img style="max-width: 100%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;"
+                  <img style="max-width: 70%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;"
                     src="../images/software_images/software6.png" alt="Software Image 6">
                   <p>Then, the software will show how many step is going to need for this process, and how long it will
                     take. There is also a loading and unloading sequence so that Andy can inform waiting truck drivers
                     about the order of entry into the port.</p>
-                  <img style="max-width: 100%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;"
+                  <img style="max-width: 70%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;"
                     src="../images/software_images/software7.png" alt="Software Image 7">
                   <p>Andy hits <strong>Start</strong> button, then there will be a bunch of steps show to Andy what he
                     needs to do.</p>
                 </div>
-                <div id="carouselExampleDark1" class="carousel carousel-dark slide">
+                <div id="carouselExampleDark1" class="carousel carousel-dark slide" style="max-width: 80%;">
                   <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleDark1" data-bs-slide-to="0" class="active"
                       aria-current="true" aria-label="Slide 1"></button>
@@ -361,11 +362,11 @@
                     <span class="visually-hidden">Next</span>
                   </button>
                 </div>
-                <p style="padding-top: 15px;">When all steps are completed, the software will generate a reminder to
+                <p style="padding-top: 15px; max-width: 80%;">When all steps are completed, the software will generate a reminder to
                   remind the operator to send the updated manifest file to the captain.</p>
-                <img style="max-width: 100%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;"
+                <img style="max-width: 80%; max-height: 100%; padding-top: 20px; padding-bottom: 20px;"
                   src="../images/software_images/steps_images/task_done.png" alt="Software Image 8">
-                <p>It should be noted that the step-by-step display was requested by the customer <i><strong>Keoghs
+                <p style="max-width: 80%;">It should be noted that the step-by-step display was requested by the customer <i><strong>Keoghs
                       Port</strong></i> to avoid operator error. The final update of the container coordinates in the
                   manifest file is also done by the software in the background, and the reminder sent to the ship's
                   captain is also requested by the customer <i><strong>Keoghs Port</strong></i>.</p>
