--- a/index.html
+++ b/index.html
@@ -90,8 +90,6 @@
           <p><strong>I am an active coder.</strong></p>
           <img style="max-width: 70%; max-height: 60%; padding-top: 15px; padding-bottom: 30px;"
             src="./project4_images/git.png">
-          <p><strong>Before July last year, I was still coding, but the code was mainly saved on my local
-              computer.</strong></p>
         </div>
 
 
@@ -114,6 +112,23 @@
                   </div>
                 </div>
               </div>
+
+              <div class="col-sm-6">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Price Tracker Website</h5>
+                    <p class="card-text" style="padding-left: 0px; padding-bottom: 0px;">An online ordering website
+                      written mainly in <i>JavaScript</i>.</p>
+                    <img style="max-width: 60%; max-height: 60%; padding-top: 0px; padding-bottom: 10px;"
+                      src="./project3_images/l2.png">
+                    <p></p>
+                    <a href="./public/projects.html#profile-tab" class="btn btn-primary btn-sm"
+                      onclick="showTab('profile-tab')">More details</a>
+
+                  </div>
+                </div>
+              </div>
+
               <div class="col-sm-6">
                 <div class="card">
                   <div class="card-body">
@@ -129,6 +144,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="col-sm-6 mb-3 mb-sm-0" style="padding-top: 15px;">
                 <div class="card">
                   <div class="card-body">
@@ -143,6 +159,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="col-sm-6" style="padding-top: 15px;">
                 <div class="card">
                   <div class="card-body">
@@ -158,6 +175,7 @@
                   </div>
                 </div>
               </div>
+
             </div>
           </div>
         </div>
