push before take a break

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             src="./project4_images/gpa.png">
           <p><strong>I am an active coder.</strong></p>
           <img style="max-width: 70%; max-height: 60%; padding-top: 15px; padding-bottom: 30px;"
-            src="./project4_images/git.png">
+            src="./project4_images/git.jpg">
         </div>
 
 
@@ -117,13 +117,13 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Price Tracker Website</h5>
-                    <p class="card-text" style="padding-left: 0px; padding-bottom: 0px;">An online ordering website
-                      written mainly in <i>JavaScript</i>.</p>
+                    <p class="card-text" style="padding-left: 0px; padding-bottom: 0px;">A price track website
+                      written mainly in <i>Python Flask</i>.</p>
                     <img style="max-width: 60%; max-height: 60%; padding-top: 0px; padding-bottom: 10px;"
-                      src="./project3_images/l2.png">
+                      src="./price_tracker_images/flask.jpg">
                     <p></p>
                     <a href="./public/projects.html#profile-tab" class="btn btn-primary btn-sm"
-                      onclick="showTab('profile-tab')">More details</a>
+                      onclick="showTab('pricetracker-tab')">More details</a>
 
                   </div>
                 </div>
