--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <img style="max-width: 60%; max-height: 60%; padding-top: 0px; padding-bottom: 10px;"
                       src="./price_tracker_images/flask.jpg">
                     <p></p>
-                    <a href="./public/projects.html#profile-tab" class="btn btn-primary btn-sm"
+                    <a href="./public/projects.html#pricetracker-tab" class="btn btn-primary btn-sm"
                       onclick="showTab('pricetracker-tab')">More details</a>
 
                   </div>
