--- a/public/projects.html
+++ b/public/projects.html
@@ -64,7 +64,11 @@
       </li>
       <li class="nav-item" role="presentation">
         <button class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane"
-          type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false">Project4</button>
+          type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false">Project 4</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="pricetracker-tab" data-bs-toggle="tab" data-bs-target="#pricetracker-tab-pane"
+          type="button" role="tab" aria-controls="pricetracker-tab-pane" aria-selected="false">Project 5</button>
       </li>
     </ul>
 
@@ -970,6 +974,111 @@
       </div>
     </div>
     <!-- project4 ends here -->
+
+    <!-- project5 starts here -->
+    <div class="tab-pane fade" id="pricetracker-tab-pane" role="tabpanel" aria-labelledby="pricetracker-tab" tabindex="0">
+      <div class="col-md-8">
+        <h5 style="text-align: center; padding-top: 30px; padding-bottom: 15px; color:brown">Price Tracker
+        </h5>
+        <img style="padding-bottom: 15px; max-height: 60%;" src="../price_tracker_images/Price Tracker.jpg" class="img-fluid"
+          alt="Project Image">
+      </div>
+      <div class="col-md-4">
+        <p style="padding-top: 15px;"><a class="icon-link icon-link-hover"
+            style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);"
+            href="https://github.com/tchen285/Eight-Puzzle.git" target="_blank">
+            <svg class="bi" aria-hidden="true">
+              <use xlink:href="#clipboard"></use>
+            </svg>
+            Project Github Link
+          </a></p>
+      </div>
+      <p style="max-width: 80% "><strong>Although this project and the next machine learning project are not as
+          complex as the previous two, they played a crucial role in my understanding of the primary algorithms of
+          artificial intelligence.</strong></p>
+      <p style="color:brown">In this project, the programming language I used is 100% Java.</p>
+      <img style="max-width: 30%; max-height: 30%; padding-top: 0px; padding-bottom: 30px;"
+        src="../project3_images/java.png">
+      <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false"
+              aria-controls="panelsStayOpen-collapseOne">
+              Uniform Cost Search
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              <!-- Put technology stack rationale right here -->
+              <div>
+                <p style="padding-top: 10px">
+                  The <strong>Uniform Cost Search</strong> is a blind search in N-puzzle problems.
+                </p>
+                <img style="max-width: 30%; max-height: 30%; padding-top: 20px; padding-bottom: 20px;"
+                  src="../project3_images/UNIFORM.png">
+                <p>The <strong>3-puzzle</strong> is small enough that we can show a full search tree.</p>
+                <p style="color: gray;">Repeated states are shown in gray.</p>
+                <img style="max-width: 70%; max-height: 70%; padding-top: 20px; padding-bottom: 20px;"
+                  src="../project3_images/3_puzzle.png">
+                <p>After level-6, there is no unvisited nodes in this tree.</p>
+                <p>However, for 3-puzzle problems, there is no problem using uniform cost search, but for 8-puzzle and
+                  higher level searches, a very large spanning tree will be formed and extremely high time complexity
+                  will be formed.</p>
+                <p>Note that in the search tree, we can acturally <code>trim</code> a branch to get the goal state.
+                  This leads to the introduction of <strong>Heuristic Search</strong>.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+              aria-controls="panelsStayOpen-collapseTwo">
+              Adding Heuristics for 8-puzzle
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              <!-- Put technology stack rationale right here -->
+              <div>
+                <p><strong>Heuristic Search</strong> is a Informed Search.</p>
+                <p>A Heuristic is a function that, when applied to a state, returns a number that is an estimate of
+                  the merit of the state, with respect to the goal.</p>
+                <p>In other words, the heuristic tells us approximately how far the state is from the
+                  <code>goal state</code>.
+                </p>
+                <img style="max-width: 30%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
+                  src="../project3_images/goal_state.png">
+                <p>In this case, only <strong>'8'</strong> is misplaced, so the heuristic function evaluates to 1.</p>
+                <p style="color:chocolate">In other words, the heuristic is telling us, that it thinks a solution
+                  might be available in just 1 more move.</p>
+                <img style="max-width: 70%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
+                  src="../project3_images/manhattan.png">
+                <p style="color:chocolate">Through Heuristic Search, we can effectively prune the Blind Search Tree.
+                </p>
+                <img style="max-width: 70%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
+                  src="../project3_images/jian.png">
+                <ul>
+                  <li><strong>My Code of Finding h(n)</strong></li>
+                  <img style="max-width: 60%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
+                    src="../project3_images/code.png">
+                  <li><strong>A Sample Console Output</strong></li>
+                  <img style="max-width: 60%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
+                    src="../project3_images/output.png">
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> 
+    <!-- project5 ends here -->
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
