push before taking a break

--- a/public/projects.html
+++ b/public/projects.html
@@ -986,26 +986,23 @@
       <div class="col-md-4">
         <p style="padding-top: 15px;"><a class="icon-link icon-link-hover"
             style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);"
-            href="https://github.com/tchen285/Eight-Puzzle.git" target="_blank">
+            href="https://github.com/tchen285/Price_tracker_app" target="_blank">
             <svg class="bi" aria-hidden="true">
               <use xlink:href="#clipboard"></use>
             </svg>
             Project Github Link
           </a></p>
       </div>
-      <p style="max-width: 80% "><strong>Although this project and the next machine learning project are not as
-          complex as the previous two, they played a crucial role in my understanding of the primary algorithms of
-          artificial intelligence.</strong></p>
-      <p style="color:brown">In this project, the programming language I used is 100% Java.</p>
+      <p style="max-width: 80% ">This project combines HTML, CSS, Flask, Jinja, urllib, pandas, smtplib, and selenium.</p>
       <img style="max-width: 30%; max-height: 30%; padding-top: 0px; padding-bottom: 30px;"
-        src="../project3_images/java.png">
+        src="../price_tracker_images/flask.jpg">
       <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false"
               aria-controls="panelsStayOpen-collapseOne">
-              Uniform Cost Search
+              Why I Make This Website
             </button>
           </h2>
           <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse">
@@ -1013,18 +1010,16 @@
               <!-- Put technology stack rationale right here -->
               <div>
                 <p style="padding-top: 10px">
-                  The <strong>Uniform Cost Search</strong> is a blind search in N-puzzle problems.
+                  Many times when we are interested in a product, we pay attention to its discount information.
                 </p>
-                <img style="max-width: 30%; max-height: 30%; padding-top: 20px; padding-bottom: 20px;"
-                  src="../project3_images/UNIFORM.png">
-                <p>The <strong>3-puzzle</strong> is small enough that we can show a full search tree.</p>
-                <p style="color: gray;">Repeated states are shown in gray.</p>
-                <img style="max-width: 70%; max-height: 70%; padding-top: 20px; padding-bottom: 20px;"
-                  src="../project3_images/3_puzzle.png">
-                <p>After level-6, there is no unvisited nodes in this tree.</p>
-                <p>However, for 3-puzzle problems, there is no problem using uniform cost search, but for 8-puzzle and
-                  higher level searches, a very large spanning tree will be formed and extremely high time complexity
-                  will be formed.</p>
+                <img style="max-width: 70%; max-height: 30%; padding-top: 20px; padding-bottom: 20px;"
+                  src="../price_tracker_images/bestbuy1.jpg">
+                <p><strong>Steam</strong> has a feature that you can add games on you wishlist.</p>
+                <img style="max-width: 50%; max-height: 70%; padding-top: 20px; padding-bottom: 20px;"
+                  src="../price_tracker_images/steam1.jpg">
+                <p>When the games on your wishlist are on sale, they will send a email to you.</p>
+                <p>I like this feature. With this feature I don't need to go to their website every day to check for discounts.</p>
+                <p>But as far as I know, Amazon and Bestbuy do not have such a function for sending discount notification.</p>
                 <p>Note that in the search tree, we can acturally <code>trim</code> a branch to get the goal state.
                   This leads to the introduction of <strong>Heuristic Search</strong>.
                 </p>
