finished first part

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
           </svg>
           !
         </p>
+        <iframe src="https://giphy.com/embed/OF0yOAufcWLfi" width="480" height="238" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/celebs-jimmy-fallon-OF0yOAufcWLfi"></a></p>
 
 
         <div class="shadow p-3 mb-5 rounded" style="background-color:lightblue">
