--- a/public/projects.html
+++ b/public/projects.html
@@ -1020,9 +1020,18 @@
                 <p>When the games on your wishlist are on sale, they will send a email to you.</p>
                 <p>I like this feature. With this feature I don't need to go to their website every day to check for discounts.</p>
                 <p>But as far as I know, Amazon and Bestbuy do not have such a function for sending discount notification.</p>
-                <p>Note that in the search tree, we can acturally <code>trim</code> a branch to get the goal state.
-                  This leads to the introduction of <strong>Heuristic Search</strong>.
+                <p>However, the notification feature on <strong>steam</strong> isn't great, for example:
                 </p>
+                <img style="max-width: 80%; max-height: 30%; padding-top: 20px; padding-bottom: 20px;"
+                src="../price_tracker_images/OCTOPATH1.jpg"> 
+                <p>I have been tracking <strong>OCTOPATH TRAVElER II</strong> for a while.</p>
+                <p>It has been on sale between $40 to $45 frequently. So each time I got an email notification.</p>
+                <p>But this game isn't a AAA game, I don't think it worth more than $30.</p>
+                <p>My target price is $25. </p>
+                <p>But every time I received an email notification, it was far from the price I expected.</p>
+                <iframe src="https://giphy.com/embed/7wk6RQYXDDytXalsL4" width="480" height="267" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/snl-saturday-night-live-season-47-7wk6RQYXDDytXalsL4"></a></p>
+                <p style="max-width: 70%;">That is why I want a website that allows me to set a target price, and then automatically checks the current prices of these products for me every day, and sends me an email notification when the price reaches my expectations.</p>
+                <iframe src="https://giphy.com/embed/tTAlBFZmF1ktweHieZ" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/abcnetwork-will-trent-abc-trentabc-willtrent-tTAlBFZmF1ktweHieZ"></a></p>
               </div>
             </div>
           </div>
