push before taking a break

--- a/public/projects.html
+++ b/public/projects.html
@@ -993,6 +993,16 @@
             Project Github Link
           </a></p>
       </div>
+      <div class="col-md-4">
+        <p style="padding-top: 15px;"><a class="icon-link icon-link-hover"
+            style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);"
+            href="https://tonychent6.pythonanywhere.com/" target="_blank">
+            <svg class="bi" aria-hidden="true">
+              <use xlink:href="#clipboard"></use>
+            </svg>
+            Try Price Tracker
+          </a></p>
+      </div>
       <p style="max-width: 80% ">This project combines HTML, CSS, Flask, Jinja, urllib, pandas, smtplib, and selenium.</p>
       <img style="max-width: 30%; max-height: 30%; padding-top: 0px; padding-bottom: 30px;"
         src="../price_tracker_images/flask.jpg">
@@ -1044,7 +1054,7 @@
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
               aria-controls="panelsStayOpen-collapseTwo">
-              Adding Heuristics for 8-puzzle
+              Walking Through Price Tracker and Code
             </button>
           </h2>
           <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
