push to take a break

--- a/public/projects.html
+++ b/public/projects.html
@@ -1054,28 +1054,22 @@
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
               aria-controls="panelsStayOpen-collapseTwo">
-              Walking Through Price Tracker and Code
+              Walking Through the Website and Code
             </button>
           </h2>
           <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
             <div class="accordion-body">
               <!-- Put technology stack rationale right here -->
               <div>
-                <p><strong>Heuristic Search</strong> is a Informed Search.</p>
-                <p>A Heuristic is a function that, when applied to a state, returns a number that is an estimate of
-                  the merit of the state, with respect to the goal.</p>
-                <p>In other words, the heuristic tells us approximately how far the state is from the
-                  <code>goal state</code>.
-                </p>
-                <img style="max-width: 30%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
-                  src="../project3_images/goal_state.png">
-                <p>In this case, only <strong>'8'</strong> is misplaced, so the heuristic function evaluates to 1.</p>
-                <p style="color:chocolate">In other words, the heuristic is telling us, that it thinks a solution
-                  might be available in just 1 more move.</p>
+                <p><strong>Price Tracker</strong> current support Bestbuy, Steam, and Amazon.</p>
+                <p>They are my top-3 shopping websites.</p>
+                <p>Users can click on the website icon they want to track.</p>
+                <img style="max-width: 60%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
+                  src="../price_tracker_images/track1.jpg">
+                <p>They will then see a page that requires them to enter the <code>URL</code>, <code>target price</code>, and their <code>email address</code>.</p>
                 <img style="max-width: 70%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
-                  src="../project3_images/manhattan.png">
-                <p style="color:chocolate">Through Heuristic Search, we can effectively prune the Blind Search Tree.
-                </p>
+                  src="../price_tracker_images/track2.jpg">
+                <p>To achieve this, I used selenium to scraping websites.</p>>
                 <img style="max-width: 70%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
                   src="../project3_images/jian.png">
                 <ul>
