temparary last push

--- a/public/projects.html
+++ b/public/projects.html
@@ -1088,6 +1088,25 @@
                 <p>At the same time, the data will be added to <code>data.csv</code>.</p>
                 <img style="max-width: 80%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
                   src="../price_tracker_images/data1.jpg">
+                <p>The website is hosted by <strong>PythonAnywhere</strong>. You can visit it on <a href="https://tonychent6.pythonanywhere.com/" target="_blank">https://tonychent6.pythonanywhere.com/</a></p>
+                <p>I also set a scheduled task on PythonAnywhere to run <code>data.py</code> every morning at 10am.</p>
+                <p>What <code>data.py</code> does is read <code>data.csv</code> through <strong>pandas</strong>.</p>
+                <img style="max-width: 60%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
+                  src="../price_tracker_images/pandas.jpg">
+                <img style="max-width: 80%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
+                  src="../price_tracker_images/readcsv.jpg">
+                <p>Opens all the urls saved on data.csv and check the current price.</p>
+                <p>If the current price is equal to or lower than the users target price. Send a email to the user.</p>
+                <img style="max-width: 80%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
+                  src="../price_tracker_images/checkprice.jpg">
+                <p>Sending email through smtplib.</p>
+                <img style="max-width: 80%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
+                  src="../price_tracker_images/email2.jpg">
+                <img style="max-width: 80%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
+                src="../price_tracker_images/email3.jpg">
+                <p style="max-width: 65%;">The user will get a notification email with the product name, the current price, the user's target price, and the link to place order.</p>
+                <img style="max-width: 80%; max-height: 50%; padding-top: 20px; padding-bottom: 20px;"
+                src="../price_tracker_images/email4.jpg">
               </div>
             </div>
           </div>
