--- a/public/projects.html
+++ b/public/projects.html
@@ -1002,6 +1002,7 @@
             </svg>
             Try Price Tracker
           </a></p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/_koE3AJjLKM" frameborder="0" allowfullscreen></iframe>
       </div>
       <p style="max-width: 80% ">This project combines HTML, CSS, Flask, Jinja, urllib, pandas, smtplib, and selenium.</p>
       <img style="max-width: 30%; max-height: 30%; padding-top: 0px; padding-bottom: 30px;"
